# DiCoReader

./: README.md  demo.ipynb  pyproject.toml  requirements.txt  setup.py
dicoreader/: __init__.py  dicoreader.py
